--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
-
-.App-link {
-  color: #61dafb;
+.box {
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 230px;
+  height: 200px;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 20px;
+  
+  clip-path: polygon(25% 0, 75% 0, 100% 50%, 75% 100%, 25% 100%, 0 50%);
 }
+.box::before {
+  content: "";
+  position: absolute;
+  width: 120px;
+  height: 120%;
+  background: linear-gradient(#00ccff, #d500f9);
+  animation: rotates 4s linear infinite;
 
-@keyframes App-logo-spin {
-  from {
+  clip-path: polygon(25% 0, 75% 0, 100% 50%, 75% 100%, 25% 100%, 0 50%);
+}
+@keyframes rotates {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
   }
+}
+.box::after {
+  content: "";
+  position: absolute;
+  background: #0e1538;
+  inset: 5px;
+  border-radius: 20px;
+
+  clip-path: polygon(25% 0, 75% 0, 100% 50%, 75% 100%, 25% 100%, 0 50%);
+}
+.box h2 {
+  color: white;
+  font-size: 4em;
+  text-shadow: 2px 2px pink;
+  z-index: 1;
+}
+
+.hexagon {
+  width: 120px;
+  height: 100px;
+  background-color: #ff0000;
+  position: relative;
+  clip-path: polygon(25% 0, 75% 0, 100% 50%, 75% 100%, 25% 100%, 0 50%);
+  margin: 50px;
 }
